Fixing spacing for content images

--- a/src/app/shared/component/content-section/content-section.component.css
+++ b/src/app/shared/component/content-section/content-section.component.css
@@ -1,22 +1,22 @@
 :host ::ng-deep h1 {
-    border-bottom: 1px solid #ffa500;
-    margin-bottom: 0.5em;
+  border-bottom: 1px solid #ffa500;
+  margin-bottom: 0.5em;
 }
 
 :host ::ng-deep h2 {
-    color: #000;
-    text-transform: uppercase;
-    font-size: 1.1em;
-    margin-bottom: 1em;
+  color: #000;
+  text-transform: uppercase;
+  font-size: 1.1em;
+  margin-bottom: 1em;
 }
 
 :host ::ng-deep p,
 :host ::ng-deep ul {
-    margin-bottom: 2em;
+  margin-bottom: 2em;
 }
 
 :host ::ng-deep img {
-    max-width: 100%;
-    display: block;
-    margin: 0 auto 1em auto;
+  max-width: 100%;
+  display: block;
+  margin: 0 auto 2em auto;
 }
